# src/controllers/auth.controller.ts
@@ -22,7 +22,26 @@ const registerValidationSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().required(),
-  password: Yup.string().required(),
+  password: Yup.string().required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test(
+      "at-least-one-number", 
+      "contains at least one number", 
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      }
+    ),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password doesn't match"),
@@ -30,6 +49,13 @@ const registerValidationSchema = Yup.object({
 
 export default {
   async register(req: Request, res: Response) {
+    /**
+    #swagger.tags = ['Auth']
+    #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/RegisterRequest"}
+    }
+     */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TResgiter;
 
@@ -64,6 +90,7 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+    #swagger.tags = ['Auth']
     #swagger.requestBody = {
       required: true,
       schema: {$ref: "#/components/schemas/LoginRequest"}
@@ -81,6 +108,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -121,6 +149,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+    #swagger.tags = ['Auth']
     #swagger.security = [{
       "bearerAuth": []
     }]
@@ -132,8 +161,35 @@ export default {
       res.status(200).json({
         message: "Success get user profile",
         data: result,
-      })
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
 
+  async activation(req: Request, res: Response) {
+    /**
+    #swagger.tags = ['Auth']
+    #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/ActivationRequest"}
+    }
+     */
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        { activationCode: code },
+        { isActive: true },
+        { new: true }
+      );
+      res.status(200).json({
+        message: "User Successfully Activated",
+        data: user,
+      });
     } catch (error) {
       const err = error as unknown as Error;
       res.status(400).json({
